ddetect (1.12) UNRELEASED; urgency=low

  * Joey Hess
    - Load ide-core explicitly rather than implicitly to allow the user to
      specify parameters sush as hda=stroke when the module is loaded.
    - Add ide-disk to /etc/modules on systems with ide. I'm not yet sure 
      what situation calls for this as it's normally autoloaded. Maybe
      something to do with lvm? See bug #289377.
  * Sven Luther
    - Added detection code for NuBus powermacs.

 -- Sven Luther <luther@debian.org>  Sun, 19 Dec 2004 14:17:46 +0100

ddetect (1.11) unstable; urgency=low

  * Colin Watson
    - Portable shell fix in hotplug-pcmcia.
  * Joey Hess
    - Work around de4x5 / tulip problem by using tulip if de4x5 is not
      available, and blacklisting de4x5. So we can control which is used
      on a per-arch or kernel basis by including the right one on the
      initrd.
    - If above hack causes tulip to be used for the first stage, call
      register-modules to make it be used on the installed system.
      Closes: #282814
    - On hppa 2.4 this doesn't happen, since tulip is built in.
      In that case, de4x5 will still be blacklisted so the hang will be
      avoided. Closes: #283754
  * Updated translations: 
    - Catalan (ca.po) by Jordi Mallach
    - Czech (cs.po) by Miroslav Kure
    - Finnish (fi.po) by Tapio Lehtonen
    - Italian (it.po) by Giuseppe Sacco
    - Dutch (nl.po) by Bart Cornelis
    - Romanian (ro.po) by Eddy Petrisor
    - Russian (ru.po) by Russian L10N Team
    - Slovenian (sl.po) by Jure Čuhalev
    - Albanian (sq.po) by Elian Myftiu
    - Traditional Chinese (zh_TW.po) by Tetralet

 -- Joey Hess <joeyh@debian.org>  Wed,  1 Dec 2004 16:14:06 -0500

ddetect (1.10) unstable; urgency=low

  * Colin Watson
    - Run discover-mac-io before discover, since that matches the ordering
      post-reboot.
  * Updated translations:
    - Bulgarian (bg.po) by Ognyan Kulev
    - Greek, Modern (1453-) (el.po) by Greek Translation Team