@@ -2,10 +2,14 @@ ddetect (1.12) UNRELEASED; urgency=low
 
   * Joey Hess
     - Load ide-core explicitly rather than implicitly to allow the user to
-      specify parameters sush as hda=stroke when the module is loaded.
+      specify parameters such as hda=stroke when the module is loaded.
     - Add ide-disk to /etc/modules on systems with ide. I'm not yet sure 
       what situation calls for this as it's normally autoloaded. Maybe
       something to do with lvm? See bug #289377.
+    - Moved register-module psmouse calls to here from rootskel.
+      Currently done for some powerpc subarches, ia64, and also now for i386,
+      since some races have been reported on i386 with the module being loaded
+      on demand as X starts.
   * Sven Luther
     - Added detection code for NuBus powermacs.
 
